# julius-baer-side-quest

submissions/AnonymityAdvoc8/: .dockerignore  .gitignore  DEVOPS.md  DOCKER.md  Dockerfile  FINAL_SUMMARY.md  Makefile  QUICKSTART.md  SUBMISSION.md  check_server.py  docker-compose.yml  env.example  example_usage.py  health_check.py  main.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup.sh
submissions/AnonymityAdvoc8/.github/workflows/: ci.yml  release.yml
submissions/AnonymityAdvoc8/banking_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
submissions/AnonymityAdvoc8/tests/: __init__.py  test_auth.py  test_client.py  test_config.py  test_integration.py  test_models.py
